force-app/main/default/objects/OrgUser__c/OrgUser__c.object-meta.xml
<CustomObject>
    <description>Organization User information retrieved during polling for the org search functionality</description>
    <label>OrgUser</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OrgUsers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>