force-app/main/default/objects/OrgUser__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <complianceGroup>PII:GDPR</complianceGroup>
    <description>Users Email</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>