force-app/main/default/objects/OrgUser__c/fields/FirstName__c.field-meta.xml
<CustomField>
    <fullName>FirstName__c</fullName>
    <complianceGroup>PII:GDPR</complianceGroup>
    <description>Users First Name</description>
    <encryptionScheme>None</encryptionScheme>
    <label>FirstName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>