force-app/main/default/objects/OrgUser__c/fields/LastName__c.field-meta.xml
<CustomField>
    <fullName>LastName__c</fullName>
    <complianceGroup>PII:GDPR</complianceGroup>
    <description>Users Last Name</description>
    <encryptionScheme>None</encryptionScheme>
    <label>LastName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>