force-app/main/default/objects/OrgUser__c/fields/ProfileName__c.field-meta.xml
<CustomField>
    <fullName>ProfileName__c</fullName>
    <complianceGroup>Normal</complianceGroup>
    <description>Users Profile Name</description>
    <encryptionScheme>None</encryptionScheme>
    <label>ProfileName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>