force-app/main/default/objects/OrgUser__c/fields/UserActive__c.field-meta.xml
<CustomField>
    <fullName>UserActive__c</fullName>
    <complianceGroup>Normal</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>Is User Active</description>
    <label>UserActive</label>
    <type>Checkbox</type>
</CustomField>