force-app/main/default/objects/OrgUser__c/fields/UserFrozen__c.field-meta.xml
<CustomField>
    <fullName>UserFrozen__c</fullName>
    <complianceGroup>Normal</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>Is User Frozen</description>
    <label>UserFrozen</label>
    <type>Checkbox</type>
</CustomField>