force-app/main/default/objects/OrgUser__c/fields/UserLastLoginDate__c.field-meta.xml
<CustomField>
    <fullName>UserLastLoginDate__c</fullName>
    <complianceGroup>Normal</complianceGroup>
    <description>Date this User was last Logged in</description>
    <encryptionScheme>None</encryptionScheme>
    <label>UserLastLoginDate</label>
    <type>DateTime</type>
</CustomField>