force-app/main/default/objects/OrgUser__c/fields/UserLastModifiedBy__c.field-meta.xml
<CustomField>
    <fullName>UserLastModifiedBy__c</fullName>
    <complianceGroup>PII:GDPR</complianceGroup>
    <description>Org User who Modified the User</description>
    <encryptionScheme>None</encryptionScheme>
    <label>UserLastModifiedBy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>