force-app/main/default/objects/OrgUser__c/fields/UserType__c.field-meta.xml
<CustomField>
    <fullName>UserType__c</fullName>
    <complianceGroup>Normal</complianceGroup>
    <description>We are now only collecting the Standard user type</description>
    <encryptionScheme>None</encryptionScheme>
    <label>UserType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>